--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -400,3 +400,16 @@ h3 {
 }
 
 
+.botao-voltar-inicio {
+    display: inline-block;
+    float: left;           /* botão fica à esquerda */
+    margin: 20px;          /* espaço ao redor */
+    padding: 12px 20px;    /* tamanho do botão */
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;       /* mesmo tamanho da página 1 */
+}
+
