--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -8,6 +8,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+hr {
+    border: 0;
+    height: 2px;
+    background-color: rgba(0,0,0,0.15);
+    margin: 40px 0;
+}
+
+
 /* =========================
    BODY
 ========================= */
