--- a/style.css
+++ b/style.css
@@ -332,10 +332,11 @@ html, body {
   .botao-pagina {
     display: block;
     width: 90%;
-    max-width: 360px;
-    margin: 32px auto;
+    max-width: 320px;
+    margin: 20px auto;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
+    padding: 10px 16px;
   }
 }
 
