--- a/style.css
+++ b/style.css
@@ -274,6 +274,9 @@ html, body {
 
 .botao-pagina {
   display: inline-block;
+  display: inline-flex;
+align-items: center;
+justify-content: center;
   margin: 40px auto;
   padding: 18px 42px;
   font-size: 17px;
@@ -330,13 +333,20 @@ html, body {
 }
 @media (max-width: 768px) {
   .botao-pagina {
-    display: block;
-    width: 90%;
-    max-width: 320px;
+    display: flex;
+    width: 85%;
+    max-width: 280px;
     margin: 20px auto;
-    text-align: center;
-    font-size: 18px;
+    font-size: 16px;
+    padding: 14px 0;
   }
 }
+
+.botao-pagina i,
+.botao-pagina svg {
+  margin-right: 8px;
+}
+
+
 
 
