--- a/pagina2/style.css
+++ b/pagina2/style.css
@@ -163,29 +163,31 @@ h3 {
 .produtos-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* sempre 2 */
-    gap: 16px;
+    gap: 20px;
 }
 
 @media (max-width: 768px) {
   .produto-card {
-    padding: 14px;
+    padding: 16px;
   }
 
   .produto-img {
-    height: 140px;
+    height: 150px;
   }
 
   h3 {
-    font-size: 14px;
+    font-size: 15px;
+    margin-bottom: 10px;
   }
 
   .preco {
-    font-size: 16px;
+    font-size: 17px;
+    margin-bottom: 12px;
   }
 
   .produto-card button {
-    font-size: 13px;
-    padding: 12px;
+    font-size: 14px;
+    padding: 13px;
   }
 }
 
